# TasteTensor

./: .gitignore  README.md  create_tables.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  models.py  routes.py
app/templates/: about.html
backend/: pca_model.pkl  pyproject.toml
backend/app/: aws_client.py  connection.py  database.py  embedder.py  main.py  pca.py  pca_model.pkl  routes.py
backend/app/db/: queries.py
backend/scripts/: embed.py  explore_data.py  reduce2d.py  setup_postgres.py  upload_s3.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  SearchBar.js  index.css
frontend/src/components/: RecipeMap.css  RecipeMap.tsx  SearchBar.css  SearchBar.jsx  SearchBar.tsx  SecureImage.css  SecureImage.tsx
scripts/: embed_recipes.py  get_embeddings.py  offline_pca.py
tests/: test_routes.py
