[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Joris van Eekeren",email = "joris.van.eekeren@linkit.nl"}
]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.24,<2.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "boto3 (>=1.39.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
packages = [{ include = "app" }]
